# CSV-parser-Query-Optimization

./: .gitignore  Gash_pointers_for mini1.txt  README.md  sample_slice.csv  shruthi_code.cpp  transposed_distinct_values.csv
Phase1_codes/: CMakeLists.txt  CrashRecord.h  RecReader.h  RecTimeStamp.h  RecVehicle.h  main.cpp  search.h
Phase2_Codes/: CMakeLists.txt  RecPeople.h  RecReader.h  main.cpp  search copy.h  search.h
Phase3_codes/: CMakeLists.txt  CrashRecord.h  RecReader.h  main.cpp  main_1.cpp
codes/: CrashRecord.h  RecPlace.h  RecReader.h  class_tryout.cpp  class_tryout2.cpp  latest_code.cpp  myfile  output  reading_the_file.cpp  shruthi_code.cpp
testing/: gpu_kernal_code.cpp  gpu_test.cpp  test1_for_OMP.cpp
